# bluez-alsa

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LICENSE.txt  Makefile.am  Makefile.am.include  NEWS  NEWS.md  README.md  TROUBLESHOOTING.md  bluez-alsa.spec  configure.ac  make_release.sh  meson.build  meson_options.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml  iwyu.imp  sanitize-lsan.supp  sanitize-tsan.supp  spellcheck-wordlist.txt  spellcheck.yaml  tsan-supressions.txt
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md
.github/actions/apt-install-deps/: action.yaml
.github/workflows/: build-and-test.yaml  code-scanning.yaml  codecov-report.yaml  codeql-analysis.yaml
LICENSES/: MIT.txt
doc/: Makefile.am  a2dpconf.1.rst  bluealsa-api.txt  bluealsa-aplay-manpage.md  bluealsa-aplay.1.rst  bluealsa-cli.1.rst  bluealsa-client.1.rst  bluealsa-cmd.1.rst  bluealsa-manpage.md  bluealsa-plugins.7.rst  bluealsa-rfcomm-manpage.md  bluealsa-rfcomm.1.rst  bluealsa.8.rst  bluealsactl.1.rst  bluealsad.8.rst  hcitop.1.rst  org.bluealsa.Manager1.7.rst  org.bluealsa.PCM1.7.rst  org.bluealsa.RFCOMM1.7.rst
misc/: Makefile.am
misc/bash-completion/: bluealsa  bluealsad
misc/systemd/: Makefile.am  bluealsa-aplay.service.in  bluealsa.service.in
recipes-multimedia/bluez-alsa/: bluez-alsa.bb
recipes-multimedia/bluez-alsa/files/: bluez-alsa.service
scripts/: README
scripts/etc/: a2dp-parameters  rc.local
scripts/etc/udev/rules.d/: 99-input.rules
scripts/usr/local/sbin/: a2dp-autoconnect  aloop
src/: Makefile.am  a2dp-aac.c  a2dp-aac.h  a2dp-aptx-hd.c  a2dp-aptx-hd.h  a2dp-aptx.c  a2dp-aptx.h  a2dp-audio.c  a2dp-audio.h  a2dp-codecs.c  a2dp-codecs.h  a2dp-faststream.c  a2dp-faststream.h  a2dp-lc3plus.c  a2dp-lc3plus.h  a2dp-ldac.c  a2dp-ldac.h  a2dp-lhdc.c  a2dp-lhdc.h  a2dp-mpeg.c  a2dp-mpeg.h  a2dp-opus.c  a2dp-opus.h  a2dp-rtp.c  a2dp-rtp.h  a2dp-sbc.c  a2dp-sbc.h  a2dp.c  a2dp.h  alsa-ctl.c  alsa-pcm.c  asha-g722.c  asha-g722.h  asha.c  asha.h  at.c  at.h  audio.c  audio.h  ba-adapter.c  (+124 more)
src/alsa/: Makefile.am  bluealsa-pcm.c
src/asound/: 20-bluealsa.conf  20-bluealsa.conf.in  21-bluealsa-hfp.conf  Makefile.am  bluealsa-ctl.c  bluealsa-pcm.c  hfp-hook.c  hfp-session.c  hfp-session.h  meson.build
src/bluealsactl/: Makefile.am  bluealsactl.h  cmd-client-delay.c  cmd-codec.c  cmd-delay-adjustment.c  cmd-info.c  cmd-list-pcms.c  cmd-list-services.c  cmd-monitor.c  cmd-mute.c  cmd-open.c  cmd-reconfigurable.c  cmd-softvol.c  cmd-status.c  cmd-volume.c  main.c
src/dbus/: dbus-codegen.py  org.bluealsa.xml  org.bluez.xml  org.ofono.xml
src/dumper/: Makefile.am  dumper-io.c  dumper-utils.c  dumper.c  dumper.h
src/shared/: Makefile.am  a2dp-codecs.c  a2dp-codecs.h  bluetooth-a2dp.c  bluetooth-a2dp.h  bluetooth-asha.c  bluetooth-asha.h  bluetooth-hfp.c  bluetooth-hfp.h  bluetooth.h  bt-codecs.c  bt-codecs.h  ctl-client.c  ctl-client.h  ctl-proto.h  dbus-client-pcm.c  dbus-client-pcm.h  dbus-client-rfcomm.c  dbus-client-rfcomm.h  dbus-client.c  dbus-client.h  defs.h  ffb.c  ffb.h  hex.c  hex.h  log.c  log.h  nv.c  nv.h  rc.c  rc.h  rt.c  rt.h
src/shared/bluealsa/: ctl-client.c  ctl-client.h  ctl-proto.h  ffb.c  ffb.h  log.c  log.h  rt.c  rt.h
test/: Makefile.am  a2dp-caps-monitor.c  a2dp.inc  aloader.c  bluealsa-mock.c  drum.raw  libaloader.c  meson.build  server-mock.c  sndalign.c  test-a2dp.c  test-alsa-ctl.c  test-alsa-midi.c  test-alsa-pcm-hwcompat-busy  test-alsa-pcm-hwcompat-none  test-alsa-pcm-hwcompat-silence  test-alsa-pcm.c  test-at.c  test-audio.c  test-ba.c  test-ble-advertisement.c  test-ble-midi.c  test-bt-advertising.c  test-bt-gatt.c  test-codec-aptx.c  test-codec-msbc.c  test-codec-sbc.c  test-ctl.c  test-dbus-iface.h  test-dbus-iface.xml  test-dbus.c  test-dumper.c  test-h2.c  test-io.c  test-lc3-swb.c  test-msbc.c  test-pcm.c  test-rfcomm.c  test-rtp.c  test-server.c  (+5 more)
test/inc/: a2dp.inc  btd.inc  check.inc  dbus.inc  mock.inc  preload.inc  server.inc  sine.inc  spawn.inc  test.inc
test/integration/: test-e2e-latency.py  test-pcm-open.sh  test-select-codec.sh
test/mock/: Makefile.am  dbus-ifaces.xml  mock-bluealsa.c  mock-bluez-iface.xml  mock-bluez.c  mock-ofono.c  mock-upower.c  mock.c  mock.h  service-bluez.c  service-ofono.c  service-upower.c  service.c  service.h
utils/: Makefile.am  a2dpconf.c  aplay.c  dbus.h  hcitop  hcitop.c  meson.build  rfcomm.c
utils/aplay/: Makefile.am  alsa-mixer.c  alsa-mixer.h  alsa-pcm.c  alsa-pcm.h  aplay.c  dbus.c  dbus.h  delay-report.c  delay-report.h  resampler.c  resampler.h  ring-buffer.c  ring-buffer.h  volume_mapping.c
utils/bash-completion/: bluealsa
utils/cli/: Makefile.am  cli.c  cli.h  cmd-codec.c  cmd-delay-adjustment.c  cmd-info.c  cmd-list-pcms.c  cmd-list-services.c  cmd-monitor.c  cmd-mute.c  cmd-open.c  cmd-softvol.c  cmd-status.c  cmd-volume.c
utils/client/: Makefile.am  client.c
utils/cmd/: Makefile.am  cmd.c
utils/rfcomm/: Makefile.am  rfcomm.c
